# ai

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  package.json
.codex-plugin/: plugin.json
.github/workflows/: app-portal-mcp-ci.yml  mcp-ci.yml
app-portal-mcp/: Cargo.toml  INSTALL.md  README.md  justfile
app-portal-mcp/src/: main.rs  server.rs
evals/svix-agent-skills/: README.md  cases.jsonl
mcp/: .clippy.toml  .dockerignore  Cargo.toml  Dockerfile  INSTALL.md  README.md  justfile
mcp/src/: common.rs  main.rs
mcp/src/app_portal/: args.rs  mod.rs  tools.rs
mcp/src/ingest/: args.rs  mod.rs  portal.rs
plugins/svix-hermes/: README.md  adapter.py  delivery.py  plugin.yaml
plugins/svix-hermes/examples/: github.md
plugins/svix-openclaw/: README.md  api.ts  index.ts  openclaw.plugin.json  package-lock.json  package.json  runtime-api.ts  tsconfig.json
plugins/svix-openclaw/src/: config.ts  poller.ts  processor.ts
skills/: README.md
skills/receiving-webhooks/: README.md  SKILL.md
skills/svix-best-practices/: SKILL.md
skills/svix-best-practices/references/: cli.md  ingest.md
skills/svix-integration/: SKILL.md
skills/svix-integration-plan/: SKILL.md
skills/svix-integration-plan/references/: dispatch-questions.md  plan-template.md  triage.md
skills/svix-integration/references/: dispatch.md  planning.md
skills/svix-new-integration/: SKILL.md
skills/svix-new-integration/references/: dispatch-questions.md  ingest-questions.md  plan-template.md  triage.md
skills/svix-quickstart/: SKILL.md
skills/svix-sending-webhooks/: SKILL.md
skills/svix-sending-webhooks/references/: ingest-questions.md  quickstart.md
