[package]
name = "app-portal-mcp"
version = "0.1.0"
edition = "2024"
description = "MCP server for debugging Svix webhook delivery problems"

[dependencies]
anyhow = "1"
axum = "0.8"
form_urlencoded = "1"
http = "1"
js_option = "0.1"
rmcp = { version = "1.8", features = ["server", "transport-io", "macros", "schemars", "transport-streamable-http-server"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
svix = "1.96"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints.rust]
# Can't forbid as we use at least one macro that expands to unsafe code
unsafe_code = "deny"
unreachable_pub = "warn"
unused_qualifications = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
trivial_numeric_casts = "warn"

[lints.clippy]
await_holding_lock = "warn"
cloned_instead_of_copied = "warn"
dbg_macro = "warn"
enum_glob_use = "warn"
filter_map_next = "warn"
if_let_mutex = "warn"
inefficient_to_string = "warn"
macro_use_imports = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
mem_forget = "warn"
mut_mut = "warn"
needless_continue = "warn"
nonstandard_macro_braces = "warn"
option_option = "warn"
redundant_clone = "warn"
ref_patterns = "warn"
rest_pat_in_fully_bound_structs = "warn"
todo = "warn"
uninlined_format_args = "warn"
unnested_or_patterns = "warn"
verbose_file_reads = "warn"
# disabled default lints
enum_variant_names = "allow"
result_large_err = "allow"
